// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms/Bookmark Gif Bookmark 1`] = `
<a
  href="https://media1.giphy.com/media/3o7abAHdYvZdBNnGZq/giphy.gif"
  rel="noreferrer"
  target="_blank"
>
  <h6
    class="MuiTypography-root MuiTypography-subtitle1"
  >
    https://media1.giphy.com/media/3o7abAHdYvZdBNnGZq/giphy.gif
  </h6>
</a>
`;

exports[`Storyshots atoms/Bookmark Image Bookmark 1`] = `
<a
  href="default-image.jpg"
  rel="noreferrer"
  target="_blank"
>
  <h6
    class="MuiTypography-root MuiTypography-subtitle1"
  >
    default-image.jpg
  </h6>
</a>
`;

exports[`Storyshots atoms/Bookmark Video Bookmark 1`] = `
<a
  href="https://i.imgur.com/IalPrWs.mp4"
  rel="noreferrer"
  target="_blank"
>
  <h6
    class="MuiTypography-root MuiTypography-subtitle1"
  >
    https://i.imgur.com/IalPrWs.mp4
  </h6>
</a>
`;
